2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	*gumps/CombatStats_gump.cc, gumps/Paperdoll_gump.cc, gumps/Stats_gump.cc: Added Oink!
	text when failed copy protection flag is set

2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	*actors.cc, gamewin.*, objs/objs.cc, usecode/ucinternal.cc: The missing Black Gate
		failed copy protection function call (random speak) has been added. Oink! is now
		used for all item say and all click descriptions except non-Avatar npc names when
		the copy protection flag is set. Discrepancies are posted in feature # 611028.

2010-12-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	*cheat.cc: heal_party now cures charmed, paralysis, and cursed flags. It also resets
		temperature but does not remove the freezing flag.

2010-12-14 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: Added check to make sure that party members do not target themselves unless
		in tournament mode. Bugs 3053811 and 2797068 should be fixed now.

2010-12-14 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: Added checks for charmed party members in Combat_schedule::find_opponents.

2010-12-13 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: Added check in Combat_schedule::find_opponents to make party members be
		attacked while sleeping if there are no other viable targets. Fixes bug # 2961387.

2010-12-13 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Added missing check for stove in find_leftovers.
	*schedule.*: added comments
	*svn:ignore: added exconfig.dll to the trunk's ignore list

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*conf/Configuration.cc: Prevent wrong error messages about moving and copying the
		configuration file in Windows if home is the Exult folder.

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>