@@ -1,4 +1,8 @@
 2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
+	*combat.cc: fix (hopefully) find_opponent bugs not fixed
+		properly in 6557 and 6558.
+
+2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
 	*gumps/CombatStats_gump.cc, gumps/Paperdoll_gump.cc, gumps/Stats_gump.cc: Added Oink!
 	text when failed copy protection flag is set
 
